--- a/src/Components/sidebar/sidebar.css
+++ b/src/Components/sidebar/sidebar.css
@@ -140,3 +140,9 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   padding: 10px 16px;
 }
+
+.sidelink.active {
+  background-color: #e0e0e0;
+  border-radius: 25px;
+  font-weight: 600;
+}
